Fix the position of the logo on small screens

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -286,7 +286,7 @@ footer i {
     
     .div-logo {
         height: 60px;
-        padding: 0 0 10px 4vw;
+        padding: 0 0 10px 2vw;
     }
         
     h1 {
@@ -298,7 +298,7 @@ footer i {
     }
 
     .logo-fancy {
-        margin: 10px 0 0 40px;
+        margin: 5px 0 0 40px;
     }
     
     .logo-farmers {
